--- a/templates/app/create_post.html
+++ b/templates/app/create_post.html
@@ -75,7 +75,7 @@
                     <label class="create__label" for="tags">Add Tags</label>
                     {{form.tags|add_class:"tags"}}
                     <!--<input type="text" value="html,input,tag" data-role="tagsinput" id="tag"></input> 
-                    <!--<select multiple name="tags" class="selectTags" data-role="tagsinput">
+                    <select multiple name="tags" class="selectTags" data-role="tagsinput">
                     </select> -->
                 </div>
                 <div class="create__section">
