--- a/templates/base/dashboard.html
+++ b/templates/base/dashboard.html
@@ -198,9 +198,20 @@
     <script src="{% static 'js/dashboard/jquery.min.js' %}"></script>
     <script src="{% static 'js/dashboard/velocity.js' %}"></script>
     <script src="{% static 'js/dashboard/j1.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="{% static 'js/dashboard/bootstrap-tagsinput.js' %}"></script>
-
+    <!-- <script src="{% static 'js/dashboard/bootstrap-tagsinput.js' %}"></script> -->
+    <script>
+        function toggleInfo() {
+          var x = document.getElementById("info");
+          if (x.style.display === "none") {
+            x.style.display = "block";
+          } else {
+            x.style.display = "none";
+          }
+        }
+    </script>
 </body>
 
 </html>
