--- a/templates/app/public_dashboard.html
+++ b/templates/app/public_dashboard.html
@@ -12,11 +12,15 @@
             </div>
             <div class="nav__categories js-dropdown">
                 <div class="nav__select">
-                    <div class="btn-select" data-dropdown-btn="categories">All Categories</div>
+                    <div class="btn-select" data-dropdown-btn="categories">
+                        All Categories
+                    </div>
                     <nav class="dropdown dropdown--design-01" data-dropdown-list="categories">
                         <ul class="dropdown__catalog row">
+                            <li class="col-xs-6"><a href="{% url 'public_dashboard' %}" class="category"><i class="bg-6eebe"></i>All categories</a>
+                            </li>
                             {% for category in categories %}
-                            <li class="col-xs-6"><a href="#" class="category"><i class="{{category.color}}"></i>{{category.name}}</a>
+                            <li class="col-xs-6"><a href="{% url 'category_filter' category.name %}" class="category"><i class="{{category.color}}"></i>{{category.name}}</a>
                             </li>
                             {% endfor %}
                         </ul>
@@ -26,8 +30,9 @@
                     <div class="btn-select" data-dropdown-btn="tags">Tags</div>
                     <div class="dropdown dropdown--design-01" data-dropdown-list="tags">
                         <div class="tags">
+                            <a href="{% url 'public_dashboard' %}" class="bg-368f8b">all</a>
                             {% for tag in tags %}
-                            <a href="#" class="{{ tag.color }}">{{tag.name}}</a>
+                            <a href="{% url 'tag_filter' tag.name %}" class="{{ tag.color }}">{{tag.name}}</a>
                             {% endfor %}
                         </div>
                     </div>
@@ -50,7 +55,6 @@
                     <li><a href="#">Most Liked</a></li>
                 </ul>
             </div>
-
         </div>
         <div class="posts">
             <div class="posts__head">
